@@ -75,7 +75,7 @@ dnl Well define the following if we don't have one:
 AC_CHECK_FUNCS([strndup strtoul strtol atoi], , )
 
 dnl We use these optionally:
-AC_CHECK_FUNCS([canonicalize_file_name realpath vfork], , )
+AC_CHECK_FUNCS([canonicalize_file_name realpath], , )
 
 dnl Compatibility Headers:
 AC_CHECK_HEADERS(tr1/cstdint)
