@@ -5,6 +5,8 @@
 	- Support sets in masks or sets; provide RECURSIVE_SETS.
 	- Provide --installed-unstable, --installed-testing, --installed-masked
 	  see http://bugs.gentoo.org/show_bug.cgi?id=240010
+	- Use fork() in ebuild[*]: vfork() seems to cause memory corruption
+	  in certain cases, see http://bugs.gentoo.org/show_bug.cgi?id=240460
 	- Make EIX_LOCAL_SETS a list of directories.
 	- Fix visible output of cache methods metadata/flat, see
 	  http://bugs.gentoo.org/show_bug.cgi?id=240038
